# reflective-rapidjson

./: .gitignore  CMakeLists.txt  README.md  TODOs.md
doc/: arch.graphml
generator/: CMakeLists.txt  README.md  binaryserializationcodegenerator.cpp  binaryserializationcodegenerator.h  clangversionabstraction.cpp  clangversionabstraction.h  codefactory.cpp  codefactory.h  codegenerator.cpp  codegenerator.h  consumer.cpp  consumer.h  frontendaction.cpp  frontendaction.h  jsonserializationcodegenerator.cpp  jsonserializationcodegenerator.h  main.cpp  serializationcodegenerator.cpp  serializationcodegenerator.h  visitor.cpp
generator/testfiles/: some_structs.h  some_structs_json_serialization.h
generator/tests/: binarygenerator.cpp  helper.h  jsongenerator.cpp  morestructs.h  overall.cpp  structs.h
lib/: CMakeLists.txt  global.h  jsonreflector-boosthana.h  jsonreflector.h  jsonserializable.h  reflect.cpp  reflect.h  reflectable.h  someclass.cpp  someclass.h  traits.h  versioning.h
lib/binary/: reflector-boosthana.h  reflector-chronoutilities.h  reflector.h  serializable.h
lib/cmake/modules/: ReflectionGenerator.cmake
lib/include/reflective_rapidjson/: binary  traits.h  versioning.h
lib/json/: errorformatting.h  errorhandling.h  reflector-boosthana.h  reflector-chronoutilities.h  reflector.h  serializable.h
lib/tests/: binaryreflector-boosthana.cpp  binaryreflector.cpp  jsonreflector-boosthana.cpp  jsonreflector-chronoutilities.cpp  jsonreflector.cpp  reflector.cpp  traits.cpp
moc/: CMakeLists.txt  codefactory.h  codegenerator.cpp  codegenerator.h  consumer.h  frontendaction.cpp  generator.cpp  generator.h  main.cpp  visitor.cpp  visitor.h
moc/testfiles/: some_structs.h  some_structs_json_serialization.h
moc/tests/: overall.cpp
